# bofeng-cpp

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/folly-task/: CMakeLists.txt  TaskApplication.cpp  TaskApplication.hpp  TaskConfig.cpp  TaskConfig.hpp  TaskExample.cpp  TaskExample.hpp  main.cpp
apps/folly-task/tests/: CMakeLists.txt  TaskExampleTest.cpp
apps/hello-world/: CMakeLists.txt  Text.cpp  Text.hpp  main.cpp
apps/hello-world/tests/: CMakeLists.txt  TextTest.cpp
common/: CMakeLists.txt  Flags.cpp  Flags.hpp
docs/: AGENTS.md  folly-library-guide.md
docs/folly/: README.md  adoption-and-build.md  concurrency.md  coroutines.md  executors.md  fibers.md  foundations.md  futures.md  io-and-networking.md  production.md  references.md
tests/folly-task/: CMakeLists.txt  TaskExampleTest.cpp
tests/hello-world/: CMakeLists.txt  TextTest.cpp
